Ingress/media.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: "media"
  name: "media-ingress"
spec:
  rules:
  - host: "media.192.168.1.240.nip.io"
    http:
      paths:
        - backend:
            serviceName: "transmission-transmission-openvpn"
            servicePort: 80
          path: "/transmission"
        - backend:
            serviceName: "sonarr"
            servicePort: 80
          path: "/sonarr"
        - backend:
            serviceName: "jackett"
            servicePort: 80
          path: "/jackett"
        - backend:
            serviceName: "radarr"
            servicePort: 80
          path: "/radarr"
	- backend:
            serviceName: "lidarr"
            servicePort: 80
          path: "/radarr"
	- backend:
            serviceName: "ubooquity"
            servicePort: 80
          path: "/ubooquity"
        - backend:
            serviceName: "emby"
            servicePort: 80
          path: "/emby"
        - backend:
            serviceName: "ombi"
            servicePort: 80
          path: "/ombi"
